[package]
name = "buttcoin"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "buttcoin"
src = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoincore-rpc = { version="0.13" }
bitcoin = { version="^0.27.0", features=["use-serde", "rand", "bitcoinconsensus"] }
serde = {version = "1.0.126", features = ["rc"]}
serde_json = "1.0.64"
serde_derive = "1.0.126"
log = "^0.4"
log4rs = "1.0.0"
hex = "^0.4"
base58check = "^0.1"
diesel = { version="1.1.0", features=["sqlite"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15"
uuid = { version="0.8.2", features=["serde", "v4"] }
rayon = "1.5.1"
hashbrown = { version="0.11.2", features=["rayon", "serde"] }
bincode = "1.3.3"
ctrlc = "3.1.9"
